syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leon.gRPC";

service StorageService {
  rpc Command(CommandRequest) returns (CommandResponse) {}
  rpc AppendLog(LogMessage) returns (LogResponse) {}
  rpc GetLeaderInfo(LeaderRequest) returns (LeaderInfo){}
}

enum CommandType {
  PUT = 0;
  READ = 1;
  DELETE = 3;
}

message CommandRequest {
  int32 request_id = 1;
  string key = 2;
  string value = 3;
  CommandType op_type = 4;
}

enum RequestStatus {
  STATUS_OK = 0;
  REJECTED_NOT_LEADER = 1;
  KEY_NOT_FOUND = 2;
  KEY_OR_VALUE_NOT_PROVIDED = 3;
  NOT_SYNCED = 4;
}

message CommandResponse {
  RequestStatus status = 1;
  int32 request_id = 2;
  string key = 3;
  string value = 4;
}

message LogMessage {
  int32 logIndex = 1; // # of log
  string log = 2; // the log itself
}

enum LogStatus {
  LOG_OK = 0;
  IO_ERROR = 1;
  LOG_MISMATCH = 2;
  FOLLOWER_BUSY = 3;
}

message LogResponse {
  LogStatus status = 1;
  int32 entryAtIndex = 2;
  int32 lastEntryIndex = 3;
}

message LeaderRequest {}

message LeaderInfo {
  bool imLeader = 1;
  string hostnamePort = 2;
}